# MeghIQ

./: .bandit  .env.example  .gitignore  .pre-commit-config.yaml  JAVA_MICROSERVICES_STATUS.md  JavaBackendAppInsights-README.md  README.md  auth.py  requirements.txt  response.py  server.py
.github/: README.md  config-sample.env  dependabot.yml
Backend/: .env  .env.example  orchestrator.py  pricing_config.example.py  requirements.txt
CostManagement/: .dockerignore  Dockerfile  README.md  claude_desktop_config.json  pyproject.toml
CostManagement/src/azure_cost_mcp/: __init__.py  __main__.py  auth.py  server.py
CostManagement/src/azure_cost_mcp/console/: __init__.py  __main__.py  app.py
CostManagement/src/azure_cost_mcp/tools/: __init__.py  alerts.py  anomalies.py  azure_updates.py  budgets.py  cost_query.py  forecast.py  pdf_report.py  recommendations.py  resource_discovery.py  update_intelligence.py
DotNetBackendAppInsights/: README.md
JavaBackendAppInsights/: .gitignore
JavaMicroservicesDemo/: README.md
MeghIQ/: CONTRIBUTING.md  LICENSE
MonitoringDemo/: MonitoringDemo.http  Program.cs
Sql-chatmcpbot/: .gitignore  README.md
agent-backend/: server.py  test_agent.py  test_agent2.py
chat-ui/: package.json
mcp-server/: README.md  auth.py  requirements.txt  server.py  startup.sh  telemetry.py
tests/: test_cost.py  test_extended.py  test_mcp.py  test_verbose.py
tools/: alerts.py  anomalies.py  azure_updates.py  azure_updates_history.py  budgets.py  cost_services.py  forecast.py  pdf_report.py  recommendations.py  resource_discovery.py  (+3 more)
(+114 files in other folders)
