[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "azure-cost-management-mcp-server"
version = "0.1.0"
description = "Azure Cost Management MCP Server - query costs, forecasts, budgets, alerts, recommendations, and anomalies via MCP"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "SfMC Adobe Team" }
]
keywords = ["azure", "cost-management", "mcp", "finops"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
]

dependencies = [
    "mcp[cli]>=1.2.0",
    "azure-identity>=1.15.0",
    "azure-mgmt-costmanagement>=4.0.0",
    "azure-mgmt-advisor>=9.0.0",
    "azure-mgmt-resource>=23.0.0",
    "azure-core>=1.30.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
]

[project.scripts]
azure-cost-mcp = "azure_cost_mcp.server:main"
azure-cost-console = "azure_cost_mcp.console.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/azure_cost_mcp"]

[tool.hatch.build.targets.sdist]
include = ["src/azure_cost_mcp"]
